Backend bugs solved